# scrapy-contrib-bigexporters

./: .bandit.yml  .gitignore  .prospector.yaml  CHANGELOG.md  LICENSE  README.rst  build_requirements.txt  pyproject.toml  setup.py
.forgejo/workflows/: build-dev.yml  build.yml
.github/workflows/: build-dev.yml  build.yml  publish_pypi.yml
docs/: avro.rst  iceberg.rst  orc.rst  parquet.rst
examples/quotes_avro/: README.rst  requirements.txt  scrapy.cfg
examples/quotes_avro/quotes_avro/: items.py  middlewares.py  pipelines.py  settings.py
examples/quotes_avro/quotes_avro/spiders/: quotes.py
examples/quotes_bigexporter/: scrapy.cfg
examples/quotes_bigexporter/quotes_bigexporter/: items.py  middlewares.py  pipelines.py  settings.py
examples/quotes_iceberg/: README.rst  requirements.txt  result.json  scrapy.cfg
examples/quotes_iceberg/quotes_iceberg/: items.py  middlewares.py  pipelines.py  settings.py
examples/quotes_iceberg/quotes_iceberg/spiders/: quotes.py
examples/quotes_orc/: README.rst  requirements.txt  scrapy.cfg
examples/quotes_orc/quotes_orc/: items.py  middlewares.py  pipelines.py  settings.py
examples/quotes_orc/quotes_orc/spiders/: quotes.py
examples/quotes_parquet/: README.rst  requirements.txt  scrapy.cfg
examples/quotes_parquet/quotes_parquet/: items.py  middlewares.py  pipelines.py  settings.py
examples/quotes_parquet/quotes_parquet/spiders/: quotes.py
tests/: __init__.py  testavro.py  testiceberg.py  testitem.py  testorc.py  testparquet.py
zuinnote/scrapy/contrib/: bigexporters.py
